# ausgarde

./: Cargo.toml  README.md  docker-compose.yaml
.cargo/: config.toml
examples/: jwt.rs
libs/ausgarde/: Cargo.toml  README.md
libs/ausgarde-actix/: Cargo.toml  README.md
libs/ausgarde-actix/src/extractor/: jwt.rs
libs/ausgarde-codegen/: Cargo.toml
libs/ausgarde-codegen/src/: lib.rs
libs/ausgarde/src/: lib.rs
libs/ausgarde/src/common/: config.rs  time.rs
libs/ausgarde/src/parser/: email.rs  id.rs  mod.rs  otp.rs  password.rs  username.rs
libs/ausgarde/src/token/: bearer.rs  jwt.rs  mod.rs
migrations/: 20241207214507_init.sql  20241210201717_domains.sql
src/: error.rs  main.rs
src/routes/: mod.rs
src/routes/api/: mod.rs
src/routes/api/v1/: mod.rs
src/routes/api/v1/admin/: login.rs  signup.rs  verify.rs
src/routes/api/v1/admin/auth/: login.rs  signup.rs  verify.rs
src/routes/api/v1/domain/: create.rs
