cargo-features = ["codegen-backend"]

[package]
name = "ausgarde-server"
version = "0.1.0"
edition = "2021"


[profile.dev]
codegen-backend = "cranelift"

[workspace]
members = ["libs/*"]

[dependencies]
ausgarde = { path = "libs/ausgarde", features = ["database"] }
ausgarde-actix = { path = "libs/ausgarde-actix" }
ausgarde-codegen = { path = "libs/ausgarde-codegen" }
actix-web = "4.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.133"
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1"] }
deadpool-postgres = "0.14.0"
serde = { version = "1.0.215", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
postgres-types = { version = "0.2.6", features = ["derive"] }
chrono = "0.4.39"
nanoid = "0.4.0"
thiserror = "2.0.6"
