[package]
name = "ausgarde"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ausgarde/ausgarde"
authors = ["nefastis"]

[features]
default = []
database = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:postgres-types"]

[dependencies]
tracing = "0.1.41"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = { version = "0.6.0-pre.1", features = [] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
fancy-regex = "0.14.0"
config = "0.14"
ulid = { version = "1.1.3", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde"] }

# Database Feature
tokio-postgres = { version = "0.7.12", optional = true }
deadpool-postgres = { version = "0.14.0", optional = true, features = [
	"serde",
] }
bytes = "1.7.1"
postgres-types = { version = "0.2.7", optional = true }
